--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,27 +1,100 @@
 /* Arquivo de estilização */
 
 body {
-    font-family: Helvetica, "Lucida Grande", sans-serif;
-    color: 3D3d3D;
+    width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+
+    font-family: Helvetica,
+    "Lucida Grande",
+    sans-serif;
+    color: #3D3D3D;
 }
 
-h1 {
+/* h1 {
+    background-color: #E1EDF2;
+}*/
+
+.titulo{
+    padding: 10px;
+    font-size: 32px;
     background-color: #E1EDF2;
 }
 
-h2{
+.subtitulo {
     border-bottom: 2px solid black;
 }
 
 figure {
+    margin: 30px;
+    padding:  15px;
+    text-align: center;
+    background-color: whitesmoke;
+    border: 1px solid lightgrey
+}
+
+figcaption{
+    margin-top: 10px;
+}
+
+.matriz-musicdot{
+    width: 550px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.familia-tupfeln {
+    width: 275px;
+    float: right;
+}
+
+figure img{
+    width: 100%;
+}
+
+.contato_subtitulo {
+    display: inline;
+}
+
+.contato_info {
+    margin: 16px 0 24px;
+    padding-left: 32px;
+}
+
+.contato_info-titulo,
+.contato_info-descricao {
+    display: inline;
+}
+
+.contato_info-descricao {
+    margin-left: 10px;
+}
+/*h2{
+    border-bottom: 2px solid black;
+} */
+
+/*figure {
     text-align: center;
     background-color: whitesmoke;
     border: 1px solid lightgrey;
-}
+} */
 
 p {
-    background-color: red;
-    height: 300px;
+    background-color: blue;
+    /*height: 300px;
     width: 300px;
-    padding: 10px 15px;
+    padding: 10px 15px; */
+    width: 30%;
+}
+
+.subtitulo {
+    font-size: 24px;
+    font-weight: bold;
+    border-bottom: 1px solid #000000;
+}
+
+a {
+    background-color: red;
+    width: 60%;
+    display: inline-block;
 }
