--- a/css/sobre.css
+++ b/css/sobre.css
@@ -56,6 +56,17 @@ figure img{
     display: inline;
 }
 
+.contato_secao {
+
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 16px;
+}
+
+.contato_secao_telefone {
+    margin-left: 32px;
+}
+
 .contato_info {
     margin: 16px 0 24px;
     padding-left: 32px;
@@ -67,18 +78,22 @@ figure img{
 }
 
 .contato_info-descricao {
-    margin-left: 10px;
+    margin-left:  10px;
 }
-/*h2{
-    border-bottom: 2px solid black;
-} */
 
-/*figure {
-    text-align: center;
-    background-color: whitesmoke;
-    border: 1px solid lightgrey;
-} */
+.rodape {
+    padding: 1.75em 0;
+    font-size: 1.1rem;
+}
 
+.rodape_logo {
+    width: 6em;
+}
+
+.rodape_compyright {
+    display: inline;
+    margin-left: 1em;
+}
 p {
     background-color: blue;
     /*height: 300px;
