--- a/css/sobre.css
+++ b/css/sobre.css
@@ -1,19 +1,17 @@
 /* Arquivo de estilização */
 
 body {
-    width: 940px;
+    width: 80%;
+    max-width: 940px;
     margin-left: auto;
     margin-right: auto;
-
+    font-size: 16px;
+    line-height: 1.5;
     font-family: Helvetica,
     "Lucida Grande",
     sans-serif;
     color: #3D3D3D;
 }
-
-/* h1 {
-    background-color: #E1EDF2;
-}*/
 
 .titulo{
     padding: 10px;
@@ -26,6 +24,8 @@ body {
 }
 
 figure {
+    max-width: 100%;
+    box-sizing: border-box;
     margin: 30px;
     padding:  15px;
     text-align: center;
@@ -90,26 +90,46 @@ figure img{
     width: 6em;
 }
 
-.rodape_compyright {
+.rodape_copyright {
     display: inline;
     margin-left: 1em;
 }
-p {
-    background-color: blue;
-    /*height: 300px;
-    width: 300px;
-    padding: 10px 15px; */
-    width: 30%;
+
+@media (max-widht: 850px){
+    .contato_secao {
+        display: block;
+        margin-left: 1em;
+    }
 }
 
-.subtitulo {
-    font-size: 24px;
-    font-weight: bold;
-    border-bottom: 1px solid #000000;
+@media ( max-width: 622px) {
+    .familia-tupfeln {
+        float: none;
+        margin: 0 auto;
+    }
 }
 
-a {
-    background-color: red;
-    width: 60%;
-    display: inline-block;
+@media ( max-width: 446px ) {
+    
+    .contato_subtitulo {
+        display: block;
+        margin-bottom: 0;
+    }
+
+    .contato_info {
+        padding-left: 5px;
+        font-size: .92em;
+        border-left: 2px solid lightgray;
+    }
+
+    .rodape {
+        font-size: .92em;
+    }
+}
+
+@media ( max-width: 342px) {
+    .contato_info-descricao {
+        display: block;
+        margin-left: 1em;
+    }
 }
