--- a/css/cursos.css
+++ b/css/cursos.css
@@ -55,3 +55,20 @@
     line-height: 1.3;
     margin: 1rem 0;
 }
+
+.chamada_cursos_matricula {
+    color: #fff;
+    background-color: #e93d50;
+}
+
+.cursos_lista {
+    font-size: .7rem;
+    font-weight: 600;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    display: grid;
+    grid-template-columns: 7rem 7rem;
+    grid-template-rows: repeat(5, 4.5rem);
+    grid-gap: .5rem;
+    text-align: center;
+}
