--- a/css/form-newsletter.css
+++ b/css/form-newsletter.css
@@ -10,14 +10,14 @@
 
 .form-newsletter_label {
     position: absolute;
-    left: 10000px;
+    left: -10000px;
     width: 1px;
     height: 1px;
     overflow: hidden;
 }
 
 .form-newsletter_campo {
-    padding: 6rem .4rem;
+    padding: .6rem .4rem;
     flex-grow: 1;
     border: none;
 }
